Version 9.3.3 (2021-05-27) – z-index fixes

--- a/osnova_colored_base.css
+++ b/osnova_colored_base.css
@@ -1671,3 +1671,14 @@ html body .ce-redactor a.andropov_link {
 	background-color: var(--tc6);
 }
 
+
+
+
+
+.v-form__legal:before {
+	background-color: var(--tc6);
+}
+
+.v-form__legal a {
+	border-bottom-color: var(--tc6);
+}
